Added masthead widget area padding

--- a/style.css
+++ b/style.css
@@ -1456,8 +1456,7 @@ a {
       margin-bottom: 0;
       text-align: center; }
   #masthead #masthead-widgets {
-    margin: 15px auto;
-    padding: 0; }
+    margin: 15px auto; }
 
 .archive #masthead,
 .search #masthead {
