Enhance masthead sidebar widget display

--- a/sass/modules/_widgets.scss
+++ b/sass/modules/_widgets.scss
@@ -1,5 +1,6 @@
 #secondary .widget,
-#colophon .widget {
+#colophon .widget,
+#masthead-widgets .widget {
 
 	.widget-title {
 		color: $color__text-medium;
