--- a/style.css
+++ b/style.css
@@ -1111,30 +1111,36 @@ a {
 # Widgets
 --------------------------------------------------------------*/
 #secondary .widget .widget-title,
-#colophon .widget .widget-title {
+#colophon .widget .widget-title,
+#masthead-widgets .widget .widget-title {
   color: #626262;
   font-size: 13px;
   line-height: normal;
   margin: 0 0 1.6em;
   text-transform: uppercase; }
   #secondary .widget .widget-title ~ *,
-  #colophon .widget .widget-title ~ * {
+  #colophon .widget .widget-title ~ *,
+  #masthead-widgets .widget .widget-title ~ * {
     font-size: 14px; }
 
 #secondary .widget a,
-#colophon .widget a {
+#colophon .widget a,
+#masthead-widgets .widget a {
   color: #626262;
   text-decoration: none; }
   #secondary .widget a:hover,
-  #colophon .widget a:hover {
+  #colophon .widget a:hover,
+  #masthead-widgets .widget a:hover {
     color: #24c48a; }
 
 #secondary .widget p,
-#colophon .widget p {
+#colophon .widget p,
+#masthead-widgets .widget p {
   margin-bottom: 24px; }
 
 #secondary .widget ul,
-#colophon .widget ul {
+#colophon .widget ul,
+#masthead-widgets .widget ul {
   list-style: none;
   margin: 0; }
 
@@ -1143,7 +1149,12 @@ a {
 #colophon .widget.widget_categories ul li,
 #colophon .widget.widget_recent_comments ul li,
 #colophon .widget.widget_recent_entries ul li,
-#colophon .widget.widget_meta ul li {
+#colophon .widget.widget_meta ul li,
+#masthead-widgets .widget.widget_archive ul li,
+#masthead-widgets .widget.widget_categories ul li,
+#masthead-widgets .widget.widget_recent_comments ul li,
+#masthead-widgets .widget.widget_recent_entries ul li,
+#masthead-widgets .widget.widget_meta ul li {
   border-bottom: 1px solid #f4f4f4;
   font-size: 13px;
   line-height: normal;
@@ -1153,7 +1164,12 @@ a {
   #colophon .widget.widget_categories ul li:first-of-type,
   #colophon .widget.widget_recent_comments ul li:first-of-type,
   #colophon .widget.widget_recent_entries ul li:first-of-type,
-  #colophon .widget.widget_meta ul li:first-of-type {
+  #colophon .widget.widget_meta ul li:first-of-type,
+  #masthead-widgets .widget.widget_archive ul li:first-of-type,
+  #masthead-widgets .widget.widget_categories ul li:first-of-type,
+  #masthead-widgets .widget.widget_recent_comments ul li:first-of-type,
+  #masthead-widgets .widget.widget_recent_entries ul li:first-of-type,
+  #masthead-widgets .widget.widget_meta ul li:first-of-type {
     padding-top: 0; }
 
 #secondary .widget {
@@ -1456,7 +1472,42 @@ a {
       margin-bottom: 0;
       text-align: center; }
   #masthead #masthead-widgets {
-    margin: 15px auto; }
+    margin: 60px auto; }
+    #masthead #masthead-widgets::after {
+      clear: both;
+      content: "";
+      display: table; }
+    #masthead #masthead-widgets .widgets.widgets-1 .widget {
+      width: 100%; }
+    #masthead #masthead-widgets .widgets.widgets-2 .widget {
+      width: 48.75%; }
+    #masthead #masthead-widgets .widgets.widgets-3 .widget {
+      width: 31.66667%; }
+    #masthead #masthead-widgets .widgets.widgets-4 .widget {
+      width: 23.125%; }
+    #masthead #masthead-widgets .widgets.widgets-5 .widget {
+      width: 18%; }
+    #masthead #masthead-widgets .widgets.widgets-6 .widget {
+      width: 14.58333%; }
+    #masthead #masthead-widgets .widgets.widgets-7 .widget {
+      width: 12.14286%; }
+    #masthead #masthead-widgets .widgets.widgets-8 .widget {
+      width: 10.3125%; }
+    #masthead #masthead-widgets .widgets.widgets-9 .widget {
+      width: 8.88889%; }
+    #masthead #masthead-widgets .widgets.widgets-10 .widget {
+      width: 7.75%; }
+    #masthead #masthead-widgets .widgets .widget {
+      box-sizing: content-box;
+      margin-right: 2.5%;
+      float: left; }
+      #masthead #masthead-widgets .widgets .widget:last-of-type {
+        margin-right: 0 !important; }
+      @media (max-width: 768px) {
+        #masthead #masthead-widgets .widgets .widget {
+          float: none;
+          margin: 0 0 4em;
+          width: 100% !important; } }
 
 .archive #masthead,
 .search #masthead {
