--- a/woocommerce.css
+++ b/woocommerce.css
@@ -311,6 +311,8 @@
         position: relative;
         right: 0;
         top: 0; }
+    .woocommerce ul.products li.product .loop-product-thumbnail .ajax_add_to_cart:not(.add_to_cart_button) {
+      display: none; }
     .woocommerce ul.products li.product .loop-product-thumbnail .product-quick-view-button {
       background: transparent;
       border: 2px solid #fff;
