Changing color of out of stock products

--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -120,6 +120,10 @@
 					float: none;
 				}
 
+				.out-of-stock {
+					color: $color__primary-accent;
+				}
+
 				.cart {
 					padding-bottom: 20px;
 					.quantity {
