--- a/style.css
+++ b/style.css
@@ -1282,15 +1282,18 @@ a {
 ## Search Widget
 --------------------------------------------------------------*/
 #secondary .widget_search .search-form,
-#colophon .widget_search .search-form {
+#colophon .widget_search .search-form,
+#masthead-widgets .widget_search .search-form {
   position: relative; }
   #secondary .widget_search .search-form input[type="search"],
-  #colophon .widget_search .search-form input[type="search"] {
+  #colophon .widget_search .search-form input[type="search"],
+  #masthead-widgets .widget_search .search-form input[type="search"] {
     box-sizing: border-box;
     max-width: 100%;
     width: 100%; }
   #secondary .widget_search .search-form button[type="submit"],
-  #colophon .widget_search .search-form button[type="submit"] {
+  #colophon .widget_search .search-form button[type="submit"],
+  #masthead-widgets .widget_search .search-form button[type="submit"] {
     border: none;
     padding: 7px;
     padding-left: 8px;
@@ -1298,7 +1301,8 @@ a {
     right: 15px;
     top: 3px; }
     #secondary .widget_search .search-form button[type="submit"] svg,
-    #colophon .widget_search .search-form button[type="submit"] svg {
+    #colophon .widget_search .search-form button[type="submit"] svg,
+    #masthead-widgets .widget_search .search-form button[type="submit"] svg {
       fill: #626262;
       height: 16px;
       width: 16px; }
@@ -1329,7 +1333,8 @@ a {
     color: #fff !important; }
 
 #secondary .widget_tag_cloud,
-#colophon .widget_tag_cloud {
+#colophon .widget_tag_cloud,
+#masthead-widgets .widget_tag_cloud {
   font-size: 14.856px;
   font-size: 0.9285rem; }
 
