--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -53,12 +53,16 @@
 		.product-content-wrapper {
 
 			.product-image-wrapper {
-				width: 50%;
 				float: left;
+				max-height: 500px;
+				overflow-y: hidden;
+				width: 50%;
 
 				@media (max-width: 600px) {
-					width: 100%;
 					float: none;
+					max-height: auto;
+					overflow-y: auto;
+					width: 100%;
 				}
 
 				img {
@@ -69,12 +73,16 @@
 			.product-info-wrapper {
 				width: 50%;
 				float: right;
+				max-height: 500px;
+				overflow-y: auto;
 				padding: 20px;
 				position: relative;
 
 				@media (max-width: 600px) {
-					width: 100%;
 					float: none;
+					max-height: auto;
+					overflow-y: auto;
+					width: 100%;
 				}
 
 				a {
