--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1435,23 +1435,31 @@
     -o-transform: rotate(45deg);
     transform: rotate(45deg); }
   .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper {
-    width: 50%;
-    float: left; }
+    float: left;
+    max-height: 500px;
+    overflow-y: hidden;
+    width: 50%; }
     @media (max-width: 600px) {
       .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper {
-        width: 100%;
-        float: none; } }
+        float: none;
+        max-height: auto;
+        overflow-y: auto;
+        width: 100%; } }
     .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper img {
       vertical-align: middle; }
   .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper {
     width: 50%;
     float: right;
+    max-height: 500px;
+    overflow-y: auto;
     padding: 20px;
     position: relative; }
     @media (max-width: 600px) {
       .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper {
-        width: 100%;
-        float: none; } }
+        float: none;
+        max-height: auto;
+        overflow-y: auto;
+        width: 100%; } }
     .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper a {
       text-decoration: none; }
     .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .product_title {
