--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -429,6 +429,8 @@
 		line-height: 1.2;
 		outline: none;
 		padding: 10px;
+		position: relative;
+		z-index: 1;
 	}
 
 	.reset_variations {
@@ -440,7 +442,6 @@
 		right: 40px;
 		@include transform(rotate(-90deg));
 		@include transition(all 0.15s ease-in);
-		z-index: -1;
 
 		path {
 			fill: $color__text-medium;
