--- a/style.css
+++ b/style.css
@@ -702,6 +702,12 @@ a {
     .main-navigation > div a {
       display: block;
       text-decoration: none; }
+  .main-navigation.mega-menu .mega-menu-megamenu ul.mega-sub-menu {
+    -webkit-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    transform: scaleY(1); }
 
 /*--------------------------------------------------------------
 ## Social and Search Icons
