--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -427,6 +427,7 @@
 		cursor: pointer;
 		font-size: 0.85em;
 		line-height: 1.2;
+		margin-bottom: 15px;
 		outline: none;
 		padding: 10px;
 		position: relative;
@@ -434,14 +435,13 @@
 	}
 
 	.reset_variations {
+		font-family: $font__details;
 		text-transform: uppercase;
 	}
 
 	svg {
 		position: relative;
 		right: 40px;
-		@include transform(rotate(-90deg));
-		@include transition(all 0.15s ease-in);
 
 		path {
 			fill: $color__text-medium;
@@ -449,9 +449,13 @@
 	}
 
 	select:hover + svg {
-		@include transform(rotate(0deg));
 		path {
 			fill: $color__text-dark;
 		}
+	}
+
+	tr,
+	tr:nth-child(2n+2) {
+		background: transparent;
 	}
 }
