--- a/woocommerce.css
+++ b/woocommerce.css
@@ -159,14 +159,6 @@
         fill: #626262; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover {
       color: #2d2d2d; }
-      .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover svg {
-        -webkit-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg); }
-        .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover svg path {
-          fill: #2d2d2d; }
     .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown-container {
       left: -1px;
       min-height: 1px;
@@ -209,7 +201,7 @@
         white-space: nowrap; }
         .woocommerce .woocommerce-ordering .ordering-selector-wrapper .ordering-dropdown li:hover {
           color: #2d2d2d; }
-    .woocommerce .woocommerce-ordering .ordering-selector-wrapper:hover .ordering-dropdown {
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper.open-dropdown .ordering-dropdown {
       opacity: 1;
       visibility: visible;
       -webkit-transform: scale(1);
@@ -217,6 +209,14 @@
       -ms-transform: scale(1);
       -o-transform: scale(1);
       transform: scale(1); }
+    .woocommerce .woocommerce-ordering .ordering-selector-wrapper.open-dropdown svg {
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg); }
+      .woocommerce .woocommerce-ordering .ordering-selector-wrapper.open-dropdown svg path {
+        fill: #2d2d2d; }
 
 .woocommerce .woocommerce-result-count {
   color: #626262;
