Don’t apply footer widget border with no widgets

--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -1,6 +1,9 @@
 #colophon {
-	border-top: 1px solid $color__background-hr-dark;
 	margin-top: $footer__top-margin;
+	
+	&.footer-active-sidebar {
+		border-top: 1px solid $color__background-hr-dark;
+	}	
 
 	.widgets {
 		@include clearfix();
