JP related posts styling

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,7 @@ Tags: one-column, two-columns, custom-background, custom-colors, custom-header, 
 # Clearings
 # Widgets
 # Content
-# Infinite scroll
+# Jetpack
 # Media
 --------------------------------------------------------------*/
 @import "variables-site/variables-site";
@@ -90,9 +90,9 @@ https://wordpress.org/plugins/so-css/.
 @import "site/site";
 
 /*--------------------------------------------------------------
-# Infinite scroll
+# Jetpack
 --------------------------------------------------------------*/
-@import "modules/infinite-scroll";
+@import "modules/jetpack";
 
 /*--------------------------------------------------------------
 # Media
