--- a/sass/modules/_jetpack.scss
+++ b/sass/modules/_jetpack.scss
@@ -37,34 +37,43 @@
 /*--------------------------------------------------------------
 ## Related Posts
 --------------------------------------------------------------*/
-.site-content #jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post {
-	opacity: 1; 
+.site-content #jp-relatedposts {
 
-	h4 {
-		margin-top: 1em;
-		
-		a {
-			color: $color__text-dark;
-			line-height: normal;
-		
-			&:hover {
-				color: $color__text-medium;
-				text-decoration: none;
-			}
-		}	
+	.jp-relatedposts-headline {
+		font-size: 1em; 
 	}
 
-	&:hover .jp-relatedposts-post-title a {
-		text-decoration: none;
-	}
-
-	p {
-		color: $color__text-light;
-		font-size: .8666rem;
+	.jp-relatedposts-items .jp-relatedposts-post {
 		opacity: 1;
-		
-		&:last-of-type {
-			margin-bottom: 1.9833em; 
-		} 	
+		padding-top: .3333em;
+
+		h4 {
+			margin-top: 1em;
+			
+			a {
+				color: $color__text-dark;
+				font-weight: 700; 
+				line-height: normal;
+			
+				&:hover {
+					color: $color__text-medium;
+					text-decoration: none;
+				}
+			}	
+		}
+
+		&:hover .jp-relatedposts-post-title a {
+			text-decoration: none;
+		}
+
+		p {
+			color: $color__text-light;
+			font-size: .8666rem;
+			opacity: 1;
+			
+			&:last-of-type {
+				margin-bottom: 1.9833em; 
+			} 	
+		}
 	}
 }
