--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -49,7 +49,7 @@
 	#masthead-widgets {
 		@include clearfix;
 		margin: 60px auto;
-		
+
 		.widgets {
 
 			@for $i from 1 through 10 {
@@ -75,6 +75,11 @@
 				}
 			}
 		}
+	}
+
+	@at-root .home & {
+		border-bottom: none;
+		margin-bottom: 0;
 	}
 }
 
