Added header design 4

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -119,6 +119,16 @@
 		display: inline-block;
 		float: none;
 	}
+
+	@at-root .header-design-4 & {
+		display: inline-block;
+		float: right;
+		padding: $masthead__padding/2 0;
+
+		> div li a {
+			line-height: 30px;
+		}
+	}
 }
 
 /*--------------------------------------------------------------
@@ -188,17 +198,19 @@
 		width: 1px;
 	}
 
-	@at-root .header-design-3 & {
-		float: none;
+	@at-root {
+		.header-design-3 &,
+		.header-design-4 & {
+			float: none;
 
+			.v-line {
+				display: none;
+			}
 
-		.v-line {
-			display: none;
-		}
-
-		.search-toggle {
-			float: right;
-			line-height: 45px;
+			.search-toggle {
+				float: right;
+				line-height: 45px;
+			}
 		}
 	}
 }
@@ -234,6 +246,10 @@
 	top: 61px;
 	width: 100%;
 	z-index: 10;
+
+	@at-root .header-design-4 & {
+		top: 100px;
+	}
 
 	ul {
 		list-style: none;
