--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -113,25 +113,55 @@
 	ul.products {
 
 		li.product {
-			margin: 0 1.75% 27px;
-			width: 31%;
+			text-align: center;
 
-			&:nth-of-type(3n+1) {
+			@at-root .wc-columns-2#{&} {
+				margin: 0 2.5% 27px;
+				width: 47.5%;
+			}
+
+			@at-root .wc-columns-3#{&} {
+				margin: 0 1.9% 27px;
+				width: 30.8%;
+			}
+
+			@at-root .wc-columns-4#{&} {
+				margin: 0 1.6665% 27px;
+				width: 22.5%;
+			}
+
+			@at-root .wc-columns-5#{&} {
+				margin: 0 1.45% 27px;
+				width: 17.68%;
+			}
+
+			&.first {
 				margin-left: 0;
 			}
 
-			&:nth-of-type(3n+3) {
+			&.last {
 				margin-right: 0;
 			}
 
 			@media (max-width: 768px) {
-				clear: none;
-				float: left;
+					@at-root {
+						.wc-columns-2#{&},
+						.wc-columns-3#{&},
+						.wc-columns-4#{&},
+						.wc-columns-5#{&} {
+							margin: 0 2% 27px;
+							width: 48%;
+						}
+					}
 
-				&:nth-child(2n) {
-					float: left;
+					&:nth-of-type(2n+1) {
+						margin-left: 0;
+					}
+
+					&:nth-of-type(2n+2) {
+						margin-right: 0;
+					}
 				}
-			}
 
 			@media (max-width: 480px) {
 				margin: 0 0 27px;
