Retarget CSS for WooCommerce 3.0 tags

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -187,7 +187,7 @@
 				margin-bottom: 0;
 			}
 
-			h3 {
+			 .woocommerce-loop-product__title {
 				font-size: 14px;
 				padding: 17px 0 0;
 				text-align: center;
