--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -378,9 +378,16 @@
 		.up-sells,
 		.related {
 
-			h3 {
-				font-size: 20px;
-				margin-bottom: 29px;
+			h2 {
+    			font-size: 20px;
+   				margin-bottom: 29px;				
+			}		
+
+			.woocommerce-loop-product__title {
+				font-size: 14px;
+				margin: 0;
+    			padding: 17px 0 0;
+    			text-align: center;
 			}
 
 			ul.products {
